# sfml-chessboard

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: board.hpp  camera.hpp  config_loader.hpp  controls.hpp  drawn_context.hpp  gl_init.hpp  object.hpp  tile.hpp
src/: config_loader.cpp  controls.cpp  main.cpp
